# mrbenn

./: .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  testrunner.py  tox.ini
.github/workflows/: django.yml  main.yml  publish.yml
docs/: Makefile  changes.rst  conf.py  index.rst
docs/source/: changes.rst  conf.py  contributing.rst  index.rst  installation.rst
frogpanel/: __init__.py  panel.py  tests.py
frogpanel/templates/frogpanel/: frogpanel.html
mrbenn_panel/: __init__.py  panel.py  tests.py  views.py
mrbenn_panel/templates/mrbenn_panel/: mrbenn_title.html
requirements/: compile.py  py310-django32.txt  py310-django40.txt  py36-django22.txt  py36-django30.txt  py36-django31.txt  py36-django32.txt  py37-django22.txt  py37-django30.txt  py37-django31.txt  py37-django32.txt  py38-django22.txt  py38-django30.txt  py38-django31.txt  py38-django32.txt  py38-django40.txt  py39-django22.txt  py39-django30.txt  py39-django31.txt  py39-django32.txt  py39-django40.txt  requirements.in
tests/: settings.py  test_mrbenn.py  urls.py
